--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
         android:layout_marginTop="32dp"
         android:background="@color/black"
         android:fontFamily="@font/montserrat"
-        android:text="Войти"
+        android:text="Вход"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_password_login"/>
