--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,8 @@
     <EditText
         android:id="@+id/et_email_login"
         style="@style/EditTextStyle"
-        android:text="Email"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/tv_login"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +47,8 @@
     <EditText
         android:id="@+id/et_password_login"
         style="@style/EditTextStyle"
-        android:text="Пароль"
+        android:hint="Пароль"
+        android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@id/et_email_login"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
